concord_macros/tests/trybuild/fail/sema/auth/reserved_credential_auth_method.stderr
error: generated public API name `acquire_auth_session` for root endpoint method conflicts with endpoint-backed credential helper in generated client
  --> tests/trybuild/fail/sema/auth/reserved_credential_auth_method.rs:10:12
   |
10 |         as acquire_auth_session
   |            ^^^^^^^^^^^^^^^^^^^^
